# adventOfCode

One/: CMakeLists.txt
One/src/: main.cpp
template/: CMakeLists.txt  your_program.sh
template/src/: main.cpp
